[package]
name = "nes-rom-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"
image = "0.23.14"

[lib]
name = "nes_rom_reader"
path = "src/lib.rs"

[[bin]]
name = "nes-rom-reader"
path = "src/main.rs"